--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -50,6 +50,7 @@ table {
 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
+		/*border: 1px solid red !important; */
 }
 
 html, body {
@@ -63,4 +64,59 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
+
+
 /* Your code starts here! */
+h1, h2, h3, h4, h5, h6{
+	font-family: "Bangers", "Titillium";
+}
+
+h1{
+	font-size: 60px;
+}
+
+
+.container{
+	max-width: 900px;
+	margin: 0 auto;
+}
+
+section{
+	display: block;
+	margin: 30px 0px 30px 0px;
+}
+
+header{
+	display: block;
+	margin: 0 auto;
+}
+
+nav{
+	display: inline-block;
+	margin-top: 10px;
+}
+
+.nav-item{
+	color: grey;
+	text-decoration: none;
+	margin: 0px 20px 0 20px;
+}
+
+.logo{
+	float: right;
+	margin-right: 5%;
+}
+
+.tagline{
+	display: inline-block;
+	text-align: center;
+}
+
+.col-4{
+	display: inline-block;
+	width: 33%;
+}
+
+.inline-block{
+	display: inline-block;
+}
