--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -79,6 +79,11 @@ h4{
 	font-size: 18px;
 }
 
+a{
+	text-decoration: none;
+	color: inherit;
+}
+
 section {
 	display: block;
 	padding: 10px 0px 10px 0px;
@@ -106,6 +111,14 @@ p{
 	font-weight: 100;
 }
 
+footer{
+	display: block;
+}
+
+address{
+	margin-bottom: 20px;
+}
+
 .container{
 	max-width: 900px;
 	margin: 0 auto;
@@ -128,17 +141,14 @@ p{
 
 .jumbotron{
 	padding: 30px 0px;
-}
-
-.inner-container{
-	display: block;
-	width: 90%;
-	margin: 0 auto;
+	position: relative;
 }
 
 .cta{
-	display: inline-block;
 	text-align: center;
+	position: absolute;
+	top: 100px;
+	left: 100px;
 }
 
 
@@ -158,4 +168,8 @@ p{
 
 .inline-block{
 	display: inline-block;
+}
+
+.contact-info{
+	margin-bottom: 30px;
 }
